18-06-2015
Version 0.3.0.1
Fixed Rcpp warnings.
Small amendments.